--- a/Product crud core mvc/Product_Crud/Product_Crud/appsettings.json
+++ b/Product crud core mvc/Product_Crud/Product_Crud/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "appCon": "Data Source=(localdb)\\ProjectModels;Initial Catalog=ProcutDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "appCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProductCrudDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
